# Stimply

./: .gitignore  CMakeLists.txt  build.sh  clean.sh
.cache/clangd/index/: Engine.cpp.874E3A86F5F75A94.idx  Engine.h.52973BEC4E8C9C75.idx  EngineGlobals.h.A280AE1454BD96F0.idx  IVulkanInterface.cpp.602B9A31DC35EC2F.idx  IVulkanInterface.h.57596DF6E9CEB1D5.idx  Includes.h.0940E65AB664C3A9.idx  Renderer.cpp.C5CB9169C59E29C4.idx  Renderer.h.B973493BF750FDB7.idx  VulkanDevice.cpp.9A891C963AC09F8C.idx  VulkanDevice.h.AADD9DA4D3F3D215.idx  VulkanIncludes.inl.81988EA51A190339.idx  VulkanRenderer.cpp.EEBF15DA70585878.idx  VulkanRenderer.h.D8A398A5E7FE6255.idx  logger.cpp.517523DC3520571F.idx  logger.h.59F321AAEB2014F6.idx  main.cpp.3EC65A3FE480BC8E.idx
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/core/utils/: Includes.h  logger.cpp  logger.h
src/renderer/: Renderer.h
src/renderer/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
